[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"


[project]
name="sokic-core"
version = "0.1"
description = "Sokic Graph API"
dependencies = [
    "sokic-api",
    "sokic-datasource-yaml"
]
requires-python = ">=3.10"

[tool.setuptools]
provides = ["sokic"]